[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise"
version = "0.0.1"
description = "Token-optimization SDK that wraps an LLM client to reduce token spend while preserving quality. Phase 0: instrumented pass-through."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["tokenwise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
